# PBL3

./: README.md
Project/components/app_storage/: CMakeLists.txt  app_storage.c
Project/components/app_storage_coap/: CMakeLists.txt
Project/components/libcoap/: CMakeLists.txt  coap_address.c  coap_async.c  coap_cache.c  coap_debug.c  coap_dgrm_lwip.c  coap_dgrm_posix.c  coap_gnutls.c  coap_io.c  coap_io_posix.c  coap_io_riot.c  coap_mbedtls.c  coap_mem.c  coap_net.c  coap_notls.c  coap_openssl.c  coap_option.c  coap_oscore.c  coap_pdu.c  coap_str.c  coap_time.c
Project/components/libcoap/include/coap3/: coap.h  coap_asn1_internal.h  coap_async_internal.h  coap_block_internal.h  coap_debug_internal.h  coap_dgrm_internal.h  coap_encode.h  coap_event.h  coap_internal.h  coap_io.h  coap_mem.h  coap_mutex_internal.h  coap_netif_internal.h  coap_prng.h  coap_prng_internal.h  coap_proxy.h  coap_proxy_internal.h  coap_resource_internal.h  coap_riot.h  coap_session.h  coap_strm_internal.h  coap_subscribe.h  coap_subscribe_internal.h  coap_supported.h  coap_time.h  coap_uri_internal.h  coap_ws_internal.h  libcoap.h
Project/components/libcoap/include/oscore/: oscore_context.h  oscore_cose.h
device_firmware/: readme.txt  tao qrcode.txt
device_firmware/1_blink/: sdkconfig  sdkconfig.old
device_firmware/2_light_drivers/: sdkconfig
device_firmware/4_network_config/: CMakeLists.txt
device_firmware/5_rainmaker/: CMakeLists.txt  sdkconfig.old
device_firmware/5_rainmaker/main/: app_main.c
device_firmware/5_rainmaker/main/include/: board_esp32c3_devkitc.h
device_firmware/6_project_optimize/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
device_firmware/7_insights/: CMakeLists.txt  sdkconfig.old
test_case/coap/: CMakeLists.txt  sdkconfig  sdkconfig.old
test_case/coap/components/libcoap/: CMakeLists.txt  coap_address.c  coap_block.c  coap_debug.c  coap_dgrm_contiki.c  coap_dgrm_riot.c  coap_io.c  coap_io_contiki.c  coap_io_lwip.c  coap_layers.c  coap_net.c  coap_netif.c  coap_prng.c  coap_proxy.c  coap_resource.c  coap_session.c  coap_sha1.c  coap_strm_contiki.c  coap_strm_lwip.c  coap_strm_posix.c  coap_strm_riot.c  coap_subscribe.c  coap_threadsafe.c  coap_tinydtls.c  coap_uri.c  coap_wolfssl.c
test_case/coap/components/libcoap/include/coap3/: coap_address.h  coap_async.h  coap_block.h  coap_cache.h  coap_cache_internal.h  coap_config.h  coap_crypto_internal.h  coap_debug.h  coap_dtls.h  coap_dtls_internal.h  coap_forward_decls.h  coap_hashkey_internal.h  coap_io_internal.h  coap_layers_internal.h  coap_net.h  coap_net_internal.h  coap_option.h  coap_oscore.h  coap_oscore_internal.h  coap_pdu.h  coap_pdu_internal.h  coap_resource.h  coap_session_internal.h  coap_sha1_internal.h  coap_str.h  coap_threadsafe_internal.h  coap_uri.h  coap_uthash_internal.h  coap_utlist_internal.h  coap_ws.h
test_case/coap/components/libcoap/include/oscore/: oscore.h  oscore_cbor.h  oscore_crypto.h
test_case/mqtt_tcp/: sdkconfig  sdkconfig.old
test_case/tcp_socket/: CMakeLists.txt  sdkconfig  sdkconfig.old
test_case/udp_socket/: CMakeLists.txt  sdkconfig
(+53 files in other folders)
